#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([VeloDataBase], [1.0], [VovanVinni@gmail.com])
AC_CONFIG_SRCDIR([src/io.cpp])
AC_CONFIG_HEADERS([src/io.h])
AC_CONFIG_HEADERS([src/members.h])
AC_CONFIG_SRCDIR([src/members.cpp])
AC_CONFIG_SRCDIR([src/main.cpp])


#AC_CONFIG_HEADERS([config.h])


AC_CONFIG_HEADERS([src/struct.h])

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_CHECK_HEADER_STDBOOL

# Checks for library functions.

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
